force-app/main/default/objects/MS_Deviation__c/MS_Deviation__c.object-meta.xml
<CustomObject>
    <description>Deviation Master Object</description>
    <label>MS Deviation</label>
    <nameField>
        <displayFormat>DEV-{00000}</displayFormat>
        <label>MS Deviation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MS Deviations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>