force-app/main/default/objects/MS_Deviation__c/fields/Approval_Authority__c.field-meta.xml
<CustomField>
    <fullName>Approval_Authority__c</fullName>
    <label>Approval Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L4</fullName>
            </value>
            <value>
                <fullName>L5</fullName>
            </value>
            <value>
                <fullName>L6</fullName>
            </value>
            <value>
                <fullName>L7</fullName>
            </value>
            <value>
                <fullName>Credit committee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>