force-app/main/default/objects/MS_Deviation__c/fields/Deviation_Description__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Description__c</fullName>
    <label>Deviation Description</label>
    <type>TextArea</type>
</CustomField>