force-app/main/default/objects/MS_Deviation__c/fields/Deviation_Group__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Group__c</fullName>
    <label>Deviation Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>