force-app/main/default/objects/MS_Deviation__c/fields/Deviation_Level__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Level__c</fullName>
    <label>Deviation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>