force-app/main/default/objects/MS_Deviation__c/fields/Deviation_Type__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Type__c</fullName>
    <label>Deviation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>