force-app/main/default/objects/MS_Deviation__c/fields/Mitigating_Factor__c.field-meta.xml
<CustomField>
    <fullName>Mitigating_Factor__c</fullName>
    <label>Mitigating Factor</label>
    <type>TextArea</type>
</CustomField>