force-app/main/default/objects/MS_Deviation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Deviation_Type__c</columns>
    <columns>Deviation_Description__c</columns>
    <columns>Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>